PGAdmin/namespace-pgadmin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
  labels:
    app: pgadmin
