PGAdmin/service-pgadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
  labels:
    app: pgadmin
  annotations:
    dns.example.com/dns-name: "k8s.pgadmin.axiome-it.lan."
    dns.example.com/zone: "axiome-it.lan."
    dns.example.com/ttl: "300"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: pgadmin
